; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_javascript.c_script_input_set_section_mouse_area.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_javascript.c_script_input_set_section_mouse_area.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @script_input_set_section_mouse_area to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @script_input_set_section_mouse_area(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @js_tostring(i32* %4, i32 1)
  %6 = inttoptr i64 %5 to i8*
  store i8* %6, i8** %3, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call %struct.TYPE_4__* @jctx(i32* %7)
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i8*, i8** %3, align 8
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @jsL_checkint(i32* %14, i32 2)
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @jsL_checkint(i32* %16, i32 3)
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @jsL_checkint(i32* %18, i32 4)
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @jsL_checkint(i32* %20, i32 5)
  %22 = call i32 @mp_input_set_section_mouse_area(i32 %12, i8* %13, i32 %15, i32 %17, i32 %19, i32 %21)
  %23 = load i32*, i32** %2, align 8
  %24 = call i32 @push_success(i32* %23)
  ret void
}

declare dso_local i64 @js_tostring(i32*, i32) #1

declare dso_local i32 @mp_input_set_section_mouse_area(i32, i8*, i32, i32, i32, i32) #1

declare dso_local %struct.TYPE_4__* @jctx(i32*) #1

declare dso_local i32 @jsL_checkint(i32*, i32) #1

declare dso_local i32 @push_success(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
